Små ændringer og manglende footer

--- a/omjiujitsu.html
+++ b/omjiujitsu.html
@@ -109,6 +109,40 @@
             </section>
         </section>
     </main>
+    <!-- Footer start -->
+    <footer>
+        <div class="footer-logo-og-social">
+            <img src="./Assets/img/LogoUb.png" class="footer-logo" alt="Hjørring Jiu-Jitsu og Judu Klub logo"
+                loading="lazy">
+        </div>
+        <div class="footer-tekst">
+            <article>
+                <h5>Om os</h5>
+                <a href="Om_Klubben.html">Læs mere om klubben</a>
+            </article>
+            <article>
+                <h5>Kontakt os</h5>
+                <p>Tlf: 8165 7220</p>
+            </article>
+            <article class="footer-social">
+                <h5>Sociale Medier</h5>
+                <div class="footer-social-ikoner">
+                    <a href="https://facebook.com/groups/484235388306687/" target="_blank"><img
+                            src="./Assets/img/facebook.png" alt="facebook logo" loading="lazy"></a>
+                    <a href="https://instagram.com/hjoerring_jiu_jitsu/" target="_blank"><img
+                            src="./Assets/img/instagram.png" alt="instagram logo" loading="lazy"></a>
+                </div>
+            </article>
+        </div>
+        <div class="footer-map">
+            <h5>Find os her</h5>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2145.9989791336207!2d9.976316113430466!3d57.46132047365474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4648ce6efa2b04e5%3A0xcbc8d1e5f681ff40!2sHj%C3%B8rring%20Jiu-Jitsu%20Klub!5e0!3m2!1sen!2sdk!4v1768215741742!5m2!1sen!2sdk"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </footer>
+    <!-- Footer slut -->
 </body>
 
 </html>
