--- a/Klubbens_Historie.html
+++ b/Klubbens_Historie.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Undersiden omkring klubbens historie">
     <title>Klubbens Historie</title>
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <!-- <meta name="Keywords" content="Jiu-Jitsu, "> -->
