--- a/arrangementer.html
+++ b/arrangementer.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Underside for arrangementer med venskabsklubber og mere">
     <title>Arrangementer</title>
     <link rel="stylesheet" href="./Assets/CSS/style.css">
 </head>
