--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Forside for Hjørring Jiu-Jitsu Klub og hvor man kan finde information">
     <title>Hjørring Jiu-Jitsu Klub</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="./Assets/CSS/style.css">
@@ -64,8 +65,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <img src="./assets/images/Hero billede.png" alt="Hjørring Jiu-Jitsu Klub Holdbillede" class="heroImage"
-                loading="lazy">
+            <img src="./assets/images/Hero billede.png" alt="Hjørring Jiu-Jitsu Klub Holdbillede" class="heroImage" loading="lazy">
         </section>
 
         <!-- About Section -->
