--- a/omtræning.html
+++ b/omtræning.html
@@ -57,8 +57,7 @@
                 aria-label="Facebook">
                 <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="https://www.instagram.com/hjoerring_jiu_jitsu/" target="_blank" class="socialLink"
-                aria-label="Instagram">
+            <a href="https://www.instagram.com/hjoerring_jiu_jitsu/" target="_blank" class="socialLink" aria-label="Instagram">
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
