--- a/venskabsKlubber.html
+++ b/venskabsKlubber.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Underside omkring klubbens venskabsklubber">
     <title>Hjørring Jiu-Jitsu Klub | Venskabsklubber</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -54,8 +55,7 @@
                 aria-label="Facebook">
                 <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="https://www.instagram.com/hjoerring_jiu_jitsu/" target="_blank" class="socialLink"
-                aria-label="Instagram">
+            <a href="https://www.instagram.com/hjoerring_jiu_jitsu/" target="_blank" class="socialLink" aria-label="Instagram">
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
@@ -64,8 +64,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <img src="./assets/images/herobilledeVenskabsklub.png" alt="Jiu-Jitsu Training Group" class="heroImage"
-                loading="lazy">
+            <img src="./assets/images/herobilledeVenskabsklub.png" alt="Jiu-Jitsu Training Group" class="heroImage" loading="lazy">
         </section>
 
         <!-- Club Grid Section -->
