Sidste sidste revision

--- a/Bliv_Medlem.html
+++ b/Bliv_Medlem.html
@@ -94,18 +94,15 @@
 
 
                 <form class="grid">
-                    <input type="navn" placeholder=" Dit Navn">
+                    <input type="text" placeholder="Navn">
 
-                    <input type="email" placeholder=" Din Email">
+                    <input type="email" placeholder="Email">
 
-                    <textarea id="Besked" placeholder="Din besked"></textarea>
+                    <textarea id="text" placeholder="Besked"></textarea>
 
                     <p class="adresse">Sted: Buen 4, 1.sal 9800 Hjørring</p>
 
                     <section class="info">
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-solid fa-phone"></i>
-                        <p> <a href="tel:+45 60 75 75 36"></a></p>
                         <button>Prøv det nu</button>
                     </section>
 
@@ -162,9 +159,8 @@
                     og
                     om at give dig redskaberne til at stå stærkt i både træningslokalet og i hverdagen.</p>
             </article>
-            <img src="./Assets/img/Solnedgang 800px.jpg"
-                alt="Et billede af to personer i gi-dragt, hvor den ene person kaster den anden over skuldren ved havet med soldnedgang, copyright Hjørring Jiu-Jitsu"
-                loading="lazy" width="650px" height="700px">
+            <img src="./Assets/img/Solnedgang_800px.jpg"
+                alt="Et billede af to personer i gi-dragt, hvor den ene person kaster den anden over skuldren ved havet med soldnedgang, copyright Hjørring Jiu-Jitsu" loading="lazy" width="650" height="700">
         </section>
 
         <section class="Kort">
