--- a/Klubbens_Historie.html
+++ b/Klubbens_Historie.html
@@ -98,7 +98,7 @@
 
         <section class="figur">
             <article class="Tosenryu">
-                <img src="./Assets/img/Background 3.png" loading="lazy"
+                <img src="./Assets/img/Background_3.png" loading="lazy"
                     alt="Billede af Jiu-Jitsu Tosenryu et sværd og en vifte, copyright Hjørring Jiu-Jitsu Klub">
                 <p>Tosenryu er det system som er baseret på de teknikker som vi i Hjørring Jiu-Jitsu klub udøver i vores
                     pensum og frie øvelser.Dette er viften, hvor man fjerner sig, eller afbøjer angrebet. Sværdet er
