--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <img src="./assets/images/Hero billede.png" alt="Hjørring Jiu-Jitsu Klub Holdbillede" class="heroImage" loading="lazy">
+            <img src="./assets/images/Hero_billede.png" alt="Hjørring Jiu-Jitsu Klub Holdbillede" class="heroImage" loading="lazy">
         </section>
 
         <!-- About Section -->
