--- a/jiuJitsuHistorie.html
+++ b/jiuJitsuHistorie.html
@@ -69,7 +69,7 @@
         </section>
         <section class="jjhistorie">
             <article>
-                <h3>De første kampformer uden våben</h3>
+                <h2>De første kampformer uden våben</h2>
                 <p>De første kendte oplysninger man har om forsvar uden våben, stammer fra billedfliser i Beni
                     Hassans
                     gravmæle, der ligger ved Nilen.</p>
@@ -80,14 +80,14 @@
                     imaginær angriber", altså en tidlig form for skyggeboksning.</p>
             </article>
             <article>
-                <h3>Kamp og træning i oldtiden</h3>
+                <h2>Kamp og træning i oldtiden</h2>
                 <p>Andre kampøvelser, såsom militærdanse havde det formål at træne soldatens kontrol over sin krop.
                     Kineserne kendte også til forskellige selvforsvarsmetoder uden nogen brug af våben idet de havde
                     udviklet en form for boksning, der var opbygget af to grundelementer: viden om de våben det
                     menneskelige legeme bestod af og viden om de sårbare steder på kroppen.</p>
             </article>
             <article>
-                <h3>Farlig viden og nervepunkter</h3>
+                <h2>Farlig viden og nervepunkter</h2>
                 <p>Der er historier om gamle læremestre der kunne dræbe en mand, bare ved let påvirkning af
                     nervepunkter, eller påvirke en nerve således, at manden døde efter en måned eller op til flere
                     år
@@ -95,7 +95,7 @@
                     græsk- indisk- kinesiske kombination af våbenløst forsvar i Japan.</p>
             </article>
             <article>
-                <h3>Kampkunst kommer til Japan</h3>
+                <h2>Kampkunst kommer til Japan</h2>
                 <p>Dog havde man i Japan udviklet sin egen kampform, hvor man ikke anvendte våben, nemlig den helt
                     oprindelige form af Sumo. Men denne og andre kampformer var i det feudale Japan kun kendt af en
                     mindretalsgruppe, i forhold til de andre lande, hvor alle befolkningsgrupper havde muligheden
@@ -103,7 +103,7 @@
                     lære kampmetoderne. </p>
             </article>
             <article>
-                <h3>Samuraierne og deres kampmetoder</h3>
+                <h2>Samuraierne og deres kampmetoder</h2>
                 <p>Ud over Sumo, eksisterede der i Japan en speciel sværdadel, kaldet samurai, der næsten havde
                     eneret
                     på at bære disse fantastiske våben. De var en slags mellemting mellem politi og soldater og
@@ -117,7 +117,7 @@
                 </ul>
             </article>
             <article>
-                <h3>Jiu-Jitsu - at vinde med mindst mulig kraft</h3>
+                <h2>Jiu-Jitsu - at vinde med mindst mulig kraft</h2>
                 <p>og så naturligvis Jiu-Jitsu, der havde en fastere målsætning og form = at uskadeliggøre en
                     modstander
                     med mindst mulig styrke og mindst mulig brug af våben. Jiu-Jitsu er ofte blevet oversat til "Den
@@ -139,14 +139,14 @@
         <section class="fratil">
             <h2>Fra samuraier til moderne kampsport</h2>
             <article>
-                <h3>Udviklingen af Jiu-Jitsu</h3>
+                <h2>Udviklingen af Jiu-Jitsu</h2>
                 <p>Samuraierne udbyggede jiu-jitsuen og omkring 1500-tallet opstod der en form for skoler, kaldet
                     Ryu,
                     der dog var indadvendte, idet de alene havde til formål at udvikle Jiu-Jitsuen til fordel for
                     sværdadlen.</p>
             </article>
             <article>
-                <h3>Da samuraierne mistede magten</h3>
+                <h2>Da samuraierne mistede magten</h2>
                 <p>Omkring 1850 havde Japan ikke deltaget i nogen større krig i næsten 300 år og samtidigt kom der
                     nye
                     krigsformer med skydevåben, der betød at to modstandere meget sjældent mødtes mand-mod-mand. Alt
@@ -159,7 +159,7 @@
                     ind sin renæssance.</p>
             </article>
             <article>
-                <h3>Jiu-Jitsu får nyt liv</h3>
+                <h2>Jiu-Jitsu får nyt liv</h2>
                 <p>Paradoksalt nok, var det en europæer der "genopfandt" jiu-jitsuen. Det var den tyske læge, dr.
                     Baelz
                     fra Tokyo Universitet, der tog et kursus i jiu-jitsu hos den 70-årige jiu-jitsu-mester Totsuka,
@@ -176,7 +176,7 @@
                     eller modstand på rette måde og tidspunkt.</p>
             </article>
             <article>
-                <h3>Judo og vejen ud i verden</h3>
+                <h2>Judo og vejen ud i verden</h2>
                 <p>I 1882 startede Kano sin skole i Tokyo, den senere Kodokan-skole. På denne skole underviste han i
                     judo og en let humaniseret form for jiu-jitsu.</p>
                 <p>Kanos idéer fik succes i Japan. Instruktører blev uddannet og sendt til Europa, hvor Yokio Tani
@@ -184,7 +184,7 @@
                     til London i 1899.</p>
             </article>
             <article>
-                <h3>Fra kampskunst til verdenssport</h3>
+                <h2>Fra kampskunst til verdenssport</h2>
                 <p>Jiu-jitsuen blev på dette tidspunkt betragtet som en idræt, men under den japansk-russiske krig
                     (1904-05) erkendes atter nytten af de gamle samurai-idéer og i 1. verdenskrig brugte flere af de
                     krigsførende parter nærkampsmetoder, der i høj grad var inspireret af jiu-jitsu.</p>
@@ -199,7 +199,7 @@
                     om psykisk styrke gennem japanernes krigsførelse i Stillehavet.</p>
             </article>
             <article>
-                <h3>Jiu-Jitsu i dag</h3>
+                <h2>Jiu-Jitsu i dag</h2>
                 <p>
                     I dag skelner man mellem Budo- og Jitsu-metoderne. Alle budoformerne er udviklet i det 20.
                     århundrede og
@@ -214,45 +214,40 @@
                 </p>
             </article>
         </section>
-        <button class="jjbutton"><a href="omjiujitsu.html">Lær mere om Jiu-Jitsu!</a></button>
+    <a href="omjiujitsu.html" class="ctaButton">Lær mere om Jiu-Jitsu!</a>
     </main>
-
+    <!-- Footer start -->
+    <footer>
+        <div class="footer-logo-og-social">
+            <img src="./Assets/img/LogoUb.png" class="footer-logo" alt="Hjørring Jiu-Jitsu og Judu Klub logo"
+                loading="lazy">
+        </div>
+        <div class="footer-tekst">
+            <article>
+                <h5>Om os</h5>
+                <a href="Om_Klubben.html">Læs mere om klubben</a>
+            </article>
+            <article>
+                <h5>Kontakt os</h5>
+                <p>Tlf: 8165 7220</p>
+            </article>
+            <article class="footer-social">
+                <h5>Sociale Medier</h5>
+                <div class="footer-social-ikoner">
+                    <a href="https://facebook.com/groups/484235388306687/" target="_blank"><img
+                            src="./Assets/img/facebook.png" alt="facebook logo" loading="lazy"></a>
+                    <a href="https://instagram.com/hjoerring_jiu_jitsu/" target="_blank"><img
+                            src="./Assets/img/instagram.png" alt="instagram logo" loading="lazy"></a>
+                </div>
+            </article>
+        </div>
+        <div class="footer-map">
+            <h5>Find os her</h5>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2145.9989791336207!2d9.976316113430466!3d57.46132047365474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4648ce6efa2b04e5%3A0xcbc8d1e5f681ff40!2sHj%C3%B8rring%20Jiu-Jitsu%20Klub!5e0!3m2!1sen!2sdk!4v1768215741742!5m2!1sen!2sdk"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </footer>
 </body>
-
-</html> <!-- Footer start -->
-<footer>
-    <div class="footer-logo-og-social">
-        <img src="./Assets/img/LogoUb.png" class="footer-logo" alt="Hjørring Jiu-Jitsu og Judu Klub logo"
-            loading="lazy">
-    </div>
-    <div class="footer-tekst">
-        <article>
-            <h5>Om os</h5>
-            <a href="Om_Klubben.html">Læs mere om klubben</a>
-        </article>
-        <article>
-            <h5>Kontakt os</h5>
-            <p>Tlf: 8165 7220</p>
-        </article>
-        <article class="footer-social">
-            <h5>Sociale Medier</h5>
-            <div class="footer-social-ikoner">
-                <a href="https://facebook.com/groups/484235388306687/" target="_blank"><img
-                        src="./Assets/img/facebook.png" alt="facebook logo" loading="lazy"></a>
-                <a href="https://instagram.com/hjoerring_jiu_jitsu/" target="_blank"><img
-                        src="./Assets/img/instagram.png" alt="instagram logo" loading="lazy"></a>
-            </div>
-        </article>
-    </div>
-    <div class="footer-map">
-        <h5>Find os her</h5>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2145.9989791336207!2d9.976316113430466!3d57.46132047365474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4648ce6efa2b04e5%3A0xcbc8d1e5f681ff40!2sHj%C3%B8rring%20Jiu-Jitsu%20Klub!5e0!3m2!1sen!2sdk!4v1768215741742!5m2!1sen!2sdk"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-</footer>
-<!-- Footer slut -->
-</body>
-
 </html>
