--- a/kontakt.html
+++ b/kontakt.html
@@ -77,10 +77,10 @@
                     Kontakt boks
                 </h2>
                 <div class="kontakt-boks-input">
-                    <input type="navn" placeholder="Navn" class="kontakt-boks-input-felt">
+                    <input type="text" placeholder="Navn" class="kontakt-boks-input-felt">
                     <input type="email" placeholder="Email" class="kontakt-boks-input-felt">
-                    <input type="input-boks" placeholder="Skriv her" class="kontakt-boks-input-felt skriv-her">
-                    <button class="kontakt-boks-knap"><a href="">Send</a></button>
+                    <input type="text" placeholder="Besked" class="kontakt-boks-input-felt skriv-her">
+                    <a href="#" class="ctaButton kontakt-boks-knap">Send</a>
                 </div>
             </div>
             <div class="kontakt-map">
