--- a/venskabsKlubber.html
+++ b/venskabsKlubber.html
@@ -73,7 +73,7 @@
             <div class="clubGrid">
                 <!-- Chikara -->
                 <div class="clubCard">
-                    <h3>Chikara</h3>
+                    <h2>Chikara</h2>
                     <div class="clubLogoContainer">
                         <img src="./assets/images/chikaraLogo.png" alt="Chikara Logo" loading="lazy">
                     </div>
@@ -82,9 +82,9 @@
 
                 <!-- Thisted -->
                 <div class="clubCard">
-                    <h3>Thisted Jiu-jitsu klub</h3>
+                    <h2>Thisted Jiu-jitsu klub</h2>
                     <div class="clubLogoContainer">
-                        <img src="./assets/images/venskabklub thisted.png" alt="Thisted Jiu-Jitsu Klub Logo"
+                        <img src="./assets/images/venskabklub_thisted.png" alt="Thisted Jiu-Jitsu Klub Logo"
                             loading="lazy">
                     </div>
                     <a href="#" class="ctaButton fullWidthBtn">Besøg Thisted jiu-jitsu klub!</a>
@@ -92,16 +92,16 @@
 
                 <!-- WAOMA -->
                 <div class="clubCard">
-                    <h3>WAOMA</h3>
+                    <h2>WAOMA</h2>
                     <div class="clubLogoContainer">
-                        <img src="./assets/images/waofmaLogo 1.png" alt="WAOMA Logo" loading="lazy">
+                        <img src="./assets/images/waofmaLogo_1.png" alt="WAOMA Logo" loading="lazy">
                     </div>
                     <a href="https://www.waofma.com/" target="_blank" class="ctaButton fullWidthBtn">Besøg WAOMA!</a>
                 </div>
 
                 <!-- Aalborg -->
                 <div class="clubCard">
-                    <h3>Aalborg selvforsvars & jiu-jitsu klub</h3>
+                    <h2>Aalborg selvforsvars & jiu-jitsu klub</h2>
                     <div class="clubLogoContainer">
                         <img src="./assets/images/venskabsklubAalborgSelvforsvar.png" alt="Aalborg Selvforsvar Logo"
                             loading="lazy">
